findbugs DM_NUMBER_CTOR.  Use autoboxing.
svn path=/dasCore/community/autoplot2011/trunk/; revision=5614